Update and rename man.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <html>
 <head>
-<title>Don't Starve / Уроки выживания</title>
+<title>Don't Starve / РЈСЂРѕРєРё РІС‹Р¶РёРІР°РЅРёСЏ</title>
 <link href="style.css" type="text/css" rel="stylesheet" media="all" />
 </head>
 <body>
 
 <h1>Don't Starve</h1>
 
-<p>Alt+Tab гайд для новичков в игре &laquo;Don't Starve&raquo;. Инструкция, гайд, прохождение, быстрый старт, вики, wiki, помощь, рецепты, крафт.</p>
+<p>Alt+Tab РіР°Р№Рґ РґР»СЏ РЅРѕРІРёС‡РєРѕРІ РІ РёРіСЂРµ &laquo;Don't Starve&raquo;. РРЅСЃС‚СЂСѓРєС†РёСЏ, РіР°Р№Рґ, РїСЂРѕС…РѕР¶РґРµРЅРёРµ, Р±С‹СЃС‚СЂС‹Р№ СЃС‚Р°СЂС‚, РІРёРєРё, wiki, РїРѕРјРѕС‰СЊ, СЂРµС†РµРїС‚С‹, РєСЂР°С„С‚.</p>
 
-<h2>Дни 1-5, разведка + ресурсы</h2>
+<h2>Р”РЅРё 1-5, СЂР°Р·РІРµРґРєР° + СЂРµСЃСѓСЂСЃС‹</h2>
 
-На старте у нас всего 15 свободных слотов (16, если играть без зажигалки, но я играю с ней и расчёт ниже идёт с учётом этого). Поэтому в первые дни у нас 2 основные задачи:<br />
+РќР° СЃС‚Р°СЂС‚Рµ Сѓ РЅР°СЃ РІСЃРµРіРѕ 15 СЃРІРѕР±РѕРґРЅС‹С… СЃР»РѕС‚РѕРІ (16, РµСЃР»Рё РёРіСЂР°С‚СЊ Р±РµР· Р·Р°Р¶РёРіР°Р»РєРё, РЅРѕ СЏ РёРіСЂР°СЋ СЃ РЅРµР№ Рё СЂР°СЃС‡С‘С‚ РЅРёР¶Рµ РёРґС‘С‚ СЃ СѓС‡С‘С‚РѕРј СЌС‚РѕРіРѕ). РџРѕСЌС‚РѕРјСѓ РІ РїРµСЂРІС‹Рµ РґРЅРё Сѓ РЅР°СЃ 2 РѕСЃРЅРѕРІРЅС‹Рµ Р·Р°РґР°С‡Рё:<br />
 <ul>
-    <li>максимально открыть карту игрового мира для оптимального выбора места под лагерь;</li>
-    <li>забить все слоты инвентаря базовыми ресурсами.</li>
+    <li>РјР°РєСЃРёРјР°Р»СЊРЅРѕ РѕС‚РєСЂС‹С‚СЊ РєР°СЂС‚Сѓ РёРіСЂРѕРІРѕРіРѕ РјРёСЂР° РґР»СЏ РѕРїС‚РёРјР°Р»СЊРЅРѕРіРѕ РІС‹Р±РѕСЂР° РјРµСЃС‚Р° РїРѕРґ Р»Р°РіРµСЂСЊ;</li>
+    <li>Р·Р°Р±РёС‚СЊ РІСЃРµ СЃР»РѕС‚С‹ РёРЅРІРµРЅС‚Р°СЂСЏ Р±Р°Р·РѕРІС‹РјРё СЂРµСЃСѓСЂСЃР°РјРё.</li>
 </ul>
-А именно, фармим следующие предметы (тут и ниже числа - минимально необходимое кол-во):
+Рђ РёРјРµРЅРЅРѕ, С„Р°СЂРјРёРј СЃР»РµРґСѓСЋС‰РёРµ РїСЂРµРґРјРµС‚С‹ (С‚СѓС‚ Рё РЅРёР¶Рµ С‡РёСЃР»Р° - РјРёРЅРёРјР°Р»СЊРЅРѕ РЅРµРѕР±С…РѕРґРёРјРѕРµ РєРѕР»-РІРѕ):
 <div>
     <div class="item trava"><b></b><s>10</s></div>
     <div class="item vetka"><b></b><s>13</s></div>
@@ -28,14 +28,14 @@
     <div class="item morkov"><b></b></div>
 </div><div class="clear"></div>
 
-Первым делом создаем кирку:
+РџРµСЂРІС‹Рј РґРµР»РѕРј СЃРѕР·РґР°РµРј РєРёСЂРєСѓ:
 <div>
     <div class="item instrument kirka"><b></b><i></i></div>
     <div class="eq">=</div>
     <div class="item vetka"><b></b><s>2</s></div>
     <div class="item kremen"><b></b><s>2</s></div>
 </div><div class="clear"></div>
-С её помощью можно ломать камни, а значит восполнять ресурсы потраченные на её создание. Далее по мере возможности:
+РЎ РµС‘ РїРѕРјРѕС‰СЊСЋ РјРѕР¶РЅРѕ Р»РѕРјР°С‚СЊ РєР°РјРЅРё, Р° Р·РЅР°С‡РёС‚ РІРѕСЃРїРѕР»РЅСЏС‚СЊ СЂРµСЃСѓСЂСЃС‹ РїРѕС‚СЂР°С‡РµРЅРЅС‹Рµ РЅР° РµС‘ СЃРѕР·РґР°РЅРёРµ. Р”Р°Р»РµРµ РїРѕ РјРµСЂРµ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё:
 <div>
     <div class="item instrument topor"><b></b><i></i></div>
     <div class="eq">=</div>
@@ -48,13 +48,13 @@
     <div class="item lepestki"><b></b><s>12</s></div>
 </div><div class="clear"></div>
 
-При обнаружении камней с золотой жилой, дополняем свой запас этим:
+РџСЂРё РѕР±РЅР°СЂСѓР¶РµРЅРёРё РєР°РјРЅРµР№ СЃ Р·РѕР»РѕС‚РѕР№ Р¶РёР»РѕР№, РґРѕРїРѕР»РЅСЏРµРј СЃРІРѕР№ Р·Р°РїР°СЃ СЌС‚РёРј:
 <div>
     <div class="item kamen"><b></b><s>7</s></div>
     <div class="item zoloto"><b></b><s>1</s></div>
     <div class="item selitra"><b></b></div>
 </div><div class="clear"></div>
-Рубим пару ближайших больших деревьев и сразу же строим:
+Р СѓР±РёРј РїР°СЂСѓ Р±Р»РёР¶Р°Р№С€РёС… Р±РѕР»СЊС€РёС… РґРµСЂРµРІСЊРµРІ Рё СЃСЂР°Р·Сѓ Р¶Рµ СЃС‚СЂРѕРёРј:
 <div>
     <div class="item nauka mashina1"><b></b><i></i></div>
     <div class="eq">=</div>
@@ -62,7 +62,7 @@
     <div class="item brevno"><b></b><s>4</s></div>
     <div class="item kamen"><b></b><s>4</s></div>
 </div><div class="clear"></div>
-Одеваем:
+РћРґРµРІР°РµРј:
 <div>
     <div class="item surv rukzak"><b></b><i></i></div>
     <div class="eq level1"></div>
@@ -70,8 +70,8 @@
     <div class="item trava"><b></b><s>4</s></div>
 </div><div class="clear"></div>
 
-В итоге к двум оставшимся слотам у нас добавляется 8 слотов рюкзака.<br />
-Создаём:
+Р’ РёС‚РѕРіРµ Рє РґРІСѓРј РѕСЃС‚Р°РІС€РёРјСЃСЏ СЃР»РѕС‚Р°Рј Сѓ РЅР°СЃ РґРѕР±Р°РІР»СЏРµС‚СЃСЏ 8 СЃР»РѕС‚РѕРІ СЂСЋРєР·Р°РєР°.<br />
+РЎРѕР·РґР°С‘Рј:
 <div>
     <div class="item material verevka"><b></b><s>2</s><i></i></div>
     <div class="eq level1"></div>
@@ -96,11 +96,11 @@
     <div class="item kamen"><b></b><s>3</s></div>
     <div class="item material verevka"><b></b><s>2</s><i></i></div>
 </div><div class="clear"></div>
-Молотком ломаем научную машину: золото вернётся, остальные ресурсы не редкость.<br />
-С этого момента начинаем рубить лес (только большие деревья и без фанатизма, иначе появится Энт).<br />
-Пни от деревьев, а также корешки травы, веток и ягод, остающиеся после их сбора, выкапываем лопатой (потом посадим их ближе к лагерю).<br />
-Более того, траву, ягоды и ветки можно сразу выкапывать и получать оба ресурса за одно действие. Тем самым экономя время.<br />
-В итоге инвентарь должен начать заполняться этими предметами (шерсть стрич бритвой с бифало по ночам):
+РњРѕР»РѕС‚РєРѕРј Р»РѕРјР°РµРј РЅР°СѓС‡РЅСѓСЋ РјР°С€РёРЅСѓ: Р·РѕР»РѕС‚Рѕ РІРµСЂРЅС‘С‚СЃСЏ, РѕСЃС‚Р°Р»СЊРЅС‹Рµ СЂРµСЃСѓСЂСЃС‹ РЅРµ СЂРµРґРєРѕСЃС‚СЊ.<br />
+РЎ СЌС‚РѕРіРѕ РјРѕРјРµРЅС‚Р° РЅР°С‡РёРЅР°РµРј СЂСѓР±РёС‚СЊ Р»РµСЃ (С‚РѕР»СЊРєРѕ Р±РѕР»СЊС€РёРµ РґРµСЂРµРІСЊСЏ Рё Р±РµР· С„Р°РЅР°С‚РёР·РјР°, РёРЅР°С‡Рµ РїРѕСЏРІРёС‚СЃСЏ Р­РЅС‚).<br />
+РџРЅРё РѕС‚ РґРµСЂРµРІСЊРµРІ, Р° С‚Р°РєР¶Рµ РєРѕСЂРµС€РєРё С‚СЂР°РІС‹, РІРµС‚РѕРє Рё СЏРіРѕРґ, РѕСЃС‚Р°СЋС‰РёРµСЃСЏ РїРѕСЃР»Рµ РёС… СЃР±РѕСЂР°, РІС‹РєР°РїС‹РІР°РµРј Р»РѕРїР°С‚РѕР№ (РїРѕС‚РѕРј РїРѕСЃР°РґРёРј РёС… Р±Р»РёР¶Рµ Рє Р»Р°РіРµСЂСЋ).<br />
+Р‘РѕР»РµРµ С‚РѕРіРѕ, С‚СЂР°РІСѓ, СЏРіРѕРґС‹ Рё РІРµС‚РєРё РјРѕР¶РЅРѕ СЃСЂР°Р·Сѓ РІС‹РєР°РїС‹РІР°С‚СЊ Рё РїРѕР»СѓС‡Р°С‚СЊ РѕР±Р° СЂРµСЃСѓСЂСЃР° Р·Р° РѕРґРЅРѕ РґРµР№СЃС‚РІРёРµ. РўРµРј СЃР°РјС‹Рј СЌРєРѕРЅРѕРјСЏ РІСЂРµРјСЏ.<br />
+Р’ РёС‚РѕРіРµ РёРЅРІРµРЅС‚Р°СЂСЊ РґРѕР»Р¶РµРЅ РЅР°С‡Р°С‚СЊ Р·Р°РїРѕР»РЅСЏС‚СЊСЃСЏ СЌС‚РёРјРё РїСЂРµРґРјРµС‚Р°РјРё (С€РµСЂСЃС‚СЊ СЃС‚СЂРёС‡ Р±СЂРёС‚РІРѕР№ СЃ Р±РёС„Р°Р»Рѕ РїРѕ РЅРѕС‡Р°Рј):
 <div>
     <div class="item brevno"><b></b></div>
     <div class="item trava2"><b></b></div>
@@ -108,20 +108,20 @@
     <div class="item yagoda2"><b></b></div>
     <div class="item sherst_b"><b></b></div>
 </div><div class="clear"></div>
-Как только на пути попадается небольшая лесопосадка (обособленно-стоящие 10-20 деревьев), поджигаем её зажигалкой или факелом.
-Ждём пока деревя обугляться, рубим их и собираем:
+РљР°Рє С‚РѕР»СЊРєРѕ РЅР° РїСѓС‚Рё РїРѕРїР°РґР°РµС‚СЃСЏ РЅРµР±РѕР»СЊС€Р°СЏ Р»РµСЃРѕРїРѕСЃР°РґРєР° (РѕР±РѕСЃРѕР±Р»РµРЅРЅРѕ-СЃС‚РѕСЏС‰РёРµ 10-20 РґРµСЂРµРІСЊРµРІ), РїРѕРґР¶РёРіР°РµРј РµС‘ Р·Р°Р¶РёРіР°Р»РєРѕР№ РёР»Рё С„Р°РєРµР»РѕРј.
+Р–РґС‘Рј РїРѕРєР° РґРµСЂРµРІСЏ РѕР±СѓРіР»СЏС‚СЊСЃСЏ, СЂСѓР±РёРј РёС… Рё СЃРѕР±РёСЂР°РµРј:
 <div>
     <div class="item ugol"><b></b><s>8</s></div>
 </div><div class="clear"></div>
-В этот момент в инвентаре должен остаться один слот. Собираем в него шишки срубленных деревьев:
+Р’ СЌС‚РѕС‚ РјРѕРјРµРЅС‚ РІ РёРЅРІРµРЅС‚Р°СЂРµ РґРѕР»Р¶РµРЅ РѕСЃС‚Р°С‚СЊСЃСЏ РѕРґРёРЅ СЃР»РѕС‚. РЎРѕР±РёСЂР°РµРј РІ РЅРµРіРѕ С€РёС€РєРё СЃСЂСѓР±Р»РµРЅРЅС‹С… РґРµСЂРµРІСЊРµРІ:
 <div>
     <div class="item shishka"><b></b></div>
 </div><div class="clear"></div>
-Позднее посадим их ближе к лагерю. Если слотов не было, шишки всё равно можно поднимать и сразу сажать, не занимая место в сумках.
+РџРѕР·РґРЅРµРµ РїРѕСЃР°РґРёРј РёС… Р±Р»РёР¶Рµ Рє Р»Р°РіРµСЂСЋ. Р•СЃР»Рё СЃР»РѕС‚РѕРІ РЅРµ Р±С‹Р»Рѕ, С€РёС€РєРё РІСЃС‘ СЂР°РІРЅРѕ РјРѕР¶РЅРѕ РїРѕРґРЅРёРјР°С‚СЊ Рё СЃСЂР°Р·Сѓ СЃР°Р¶Р°С‚СЊ, РЅРµ Р·Р°РЅРёРјР°СЏ РјРµСЃС‚Рѕ РІ СЃСѓРјРєР°С….
 
-<h2>Дни 6-7, первая база</h2>
+<h2>Р”РЅРё 6-7, РїРµСЂРІР°СЏ Р±Р°Р·Р°</h2>
 
-Всего понадобится:
+Р’СЃРµРіРѕ РїРѕРЅР°РґРѕР±РёС‚СЃСЏ:
 <div>
     <div class="item vetka"><b></b><s>15</s></div>
     <div class="item trava"><b></b><s>43</s></div>
@@ -132,9 +132,9 @@
     <div class="item zoloto"><b></b><s>4</s></div>
 </div><div class="clear"></div>
 
-Осматриваем мини-карту. Оптимальное место - биом лугов. Рядом должны быть степи с кроликами и бифало, лес, деревня свиней в пешей доступности.<br />
-Хорошо, если лагерь стоит на дороге в центре поляны и расстояние до ключевых локаций примерно одинаковое.<br />
-Первым делом необходимо установить:
+РћСЃРјР°С‚СЂРёРІР°РµРј РјРёРЅРё-РєР°СЂС‚Сѓ. РћРїС‚РёРјР°Р»СЊРЅРѕРµ РјРµСЃС‚Рѕ - Р±РёРѕРј Р»СѓРіРѕРІ. Р СЏРґРѕРј РґРѕР»Р¶РЅС‹ Р±С‹С‚СЊ СЃС‚РµРїРё СЃ РєСЂРѕР»РёРєР°РјРё Рё Р±РёС„Р°Р»Рѕ, Р»РµСЃ, РґРµСЂРµРІРЅСЏ СЃРІРёРЅРµР№ РІ РїРµС€РµР№ РґРѕСЃС‚СѓРїРЅРѕСЃС‚Рё.<br />
+РҐРѕСЂРѕС€Рѕ, РµСЃР»Рё Р»Р°РіРµСЂСЊ СЃС‚РѕРёС‚ РЅР° РґРѕСЂРѕРіРµ РІ С†РµРЅС‚СЂРµ РїРѕР»СЏРЅС‹ Рё СЂР°СЃСЃС‚РѕСЏРЅРёРµ РґРѕ РєР»СЋС‡РµРІС‹С… Р»РѕРєР°С†РёР№ РїСЂРёРјРµСЂРЅРѕ РѕРґРёРЅР°РєРѕРІРѕРµ.<br />
+РџРµСЂРІС‹Рј РґРµР»РѕРј РЅРµРѕР±С…РѕРґРёРјРѕ СѓСЃС‚Р°РЅРѕРІРёС‚СЊ:
 <div>
     <div class="item svet koster2"><b></b><i></i></div>
     <div class="eq">=</div>
@@ -201,17 +201,17 @@
     <div class="item brevno"><b></b><s>8</s></div>
 </div><div class="clear"></div>
 
-Если не хватает травы, можно ограничиться одной или даже ниодной грядкой, и оставить их напотом.<br />
-С брёвнами проще. Находим лес рядом с деревней свиней, идём в него на рассвете и вырубаем нужного размера участок.<br />
-Появившегося Энта отводим в деревню свиней и дружно убиваем не получив ни одного удара. В итоге имеем:
+Р•СЃР»Рё РЅРµ С…РІР°С‚Р°РµС‚ С‚СЂР°РІС‹, РјРѕР¶РЅРѕ РѕРіСЂР°РЅРёС‡РёС‚СЊСЃСЏ РѕРґРЅРѕР№ РёР»Рё РґР°Р¶Рµ РЅРёРѕРґРЅРѕР№ РіСЂСЏРґРєРѕР№, Рё РѕСЃС‚Р°РІРёС‚СЊ РёС… РЅР°РїРѕС‚РѕРј.<br />
+РЎ Р±СЂС‘РІРЅР°РјРё РїСЂРѕС‰Рµ. РќР°С…РѕРґРёРј Р»РµСЃ СЂСЏРґРѕРј СЃ РґРµСЂРµРІРЅРµР№ СЃРІРёРЅРµР№, РёРґС‘Рј РІ РЅРµРіРѕ РЅР° СЂР°СЃСЃРІРµС‚Рµ Рё РІС‹СЂСѓР±Р°РµРј РЅСѓР¶РЅРѕРіРѕ СЂР°Р·РјРµСЂР° СѓС‡Р°СЃС‚РѕРє.<br />
+РџРѕСЏРІРёРІС€РµРіРѕСЃСЏ Р­РЅС‚Р° РѕС‚РІРѕРґРёРј РІ РґРµСЂРµРІРЅСЋ СЃРІРёРЅРµР№ Рё РґСЂСѓР¶РЅРѕ СѓР±РёРІР°РµРј РЅРµ РїРѕР»СѓС‡РёРІ РЅРё РѕРґРЅРѕРіРѕ СѓРґР°СЂР°. Р’ РёС‚РѕРіРµ РёРјРµРµРј:
 <div>
     <div class="item brevno_jivoe"><b></b><s>6</s></div>
     <div class="item shkura_svini"><b></b></div>
 </div><div class="clear"></div>
 
-<h2>Дни 8-12, ресурсы боем</h2>
+<h2>Р”РЅРё 8-12, СЂРµСЃСѓСЂСЃС‹ Р±РѕРµРј</h2>
 
-Всего понадобится:
+Р’СЃРµРіРѕ РїРѕРЅР°РґРѕР±РёС‚СЃСЏ:
 <div>
     <div class="item vetka"><b></b><s>10</s></div>
     <div class="item trava"><b></b><s>36</s></div>
@@ -224,14 +224,14 @@
     <div class="item shkura_svini"><b></b><s>1</s></div>
     <div class="item shesterni"><b></b><s>1</s></div>
 </div><div class="clear"></div>
-Плюс, будет получено:
+РџР»СЋСЃ, Р±СѓРґРµС‚ РїРѕР»СѓС‡РµРЅРѕ:
 <div>
     <div class="item kamish"><b></b></div>
     <div class="item riba"><b></b></div>
     <div class="item krolik"><b></b></div>
 </div><div class="clear"></div>
 
-Итак, основа лагеря заложена. Пора позаботиться о еде и её хранении. Обновляем научную машину до алхимической.
+РС‚Р°Рє, РѕСЃРЅРѕРІР° Р»Р°РіРµСЂСЏ Р·Р°Р»РѕР¶РµРЅР°. РџРѕСЂР° РїРѕР·Р°Р±РѕС‚РёС‚СЊСЃСЏ Рѕ РµРґРµ Рё РµС‘ С…СЂР°РЅРµРЅРёРё. РћР±РЅРѕРІР»СЏРµРј РЅР°СѓС‡РЅСѓСЋ РјР°С€РёРЅСѓ РґРѕ Р°Р»С…РёРјРёС‡РµСЃРєРѕР№.
 <div>
     <div class="item material doski"><b></b><s>4</s><i></i></div>
     <div class="eq level1"></div>
@@ -249,8 +249,8 @@
     <div class="item material doski"><b></b><s>4</s><i></i></div>
     <div class="item material blok"><b></b><s>2</s><i></i></div>
 </div><div class="clear"></div>
-Создаём её прототип, ТОЛЬКО после этого ломаем молотком старую и на её место ставим новую.<br />
-Вооржуаемся:
+РЎРѕР·РґР°С‘Рј РµС‘ РїСЂРѕС‚РѕС‚РёРї, РўРћР›Р¬РљРћ РїРѕСЃР»Рµ СЌС‚РѕРіРѕ Р»РѕРјР°РµРј РјРѕР»РѕС‚РєРѕРј СЃС‚Р°СЂСѓСЋ Рё РЅР° РµС‘ РјРµСЃС‚Рѕ СЃС‚Р°РІРёРј РЅРѕРІСѓСЋ.<br />
+Р’РѕРѕСЂР¶СѓР°РµРјСЃСЏ:
 <div>
     <div class="item material verevka"><b></b><s>4</s><i></i></div>
     <div class="eq level1"></div>
@@ -275,9 +275,9 @@
     <div class="item shkura_svini"><b></b><s>1</s></div>
     <div class="item material verevka"><b></b><s>1</s><i></i></div>
 </div><div class="clear"></div>
-Шлем свиньи опционален и возможен без проблем, если во время массовой вырубки леса, описанной ранее, Энт убил несколько свиней и с них выпали шкуры.<br />
-Фармим паутину, для чего просто внаглую стоим и убиваем паучков возле коконов. После каждого удара они замирают на некоторое время, которого хватает для нанесения следующего удара и т.д.<br />
-Даже если их 2 или 3, можно смело бить их ценой брони, а не здоровья.
+РЁР»РµРј СЃРІРёРЅСЊРё РѕРїС†РёРѕРЅР°Р»РµРЅ Рё РІРѕР·РјРѕР¶РµРЅ Р±РµР· РїСЂРѕР±Р»РµРј, РµСЃР»Рё РІРѕ РІСЂРµРјСЏ РјР°СЃСЃРѕРІРѕР№ РІС‹СЂСѓР±РєРё Р»РµСЃР°, РѕРїРёСЃР°РЅРЅРѕР№ СЂР°РЅРµРµ, Р­РЅС‚ СѓР±РёР» РЅРµСЃРєРѕР»СЊРєРѕ СЃРІРёРЅРµР№ Рё СЃ РЅРёС… РІС‹РїР°Р»Рё С€РєСѓСЂС‹.<br />
+Р¤Р°СЂРјРёРј РїР°СѓС‚РёРЅСѓ, РґР»СЏ С‡РµРіРѕ РїСЂРѕСЃС‚Рѕ РІРЅР°РіР»СѓСЋ СЃС‚РѕРёРј Рё СѓР±РёРІР°РµРј РїР°СѓС‡РєРѕРІ РІРѕР·Р»Рµ РєРѕРєРѕРЅРѕРІ. РџРѕСЃР»Рµ РєР°Р¶РґРѕРіРѕ СѓРґР°СЂР° РѕРЅРё Р·Р°РјРёСЂР°СЋС‚ РЅР° РЅРµРєРѕС‚РѕСЂРѕРµ РІСЂРµРјСЏ, РєРѕС‚РѕСЂРѕРіРѕ С…РІР°С‚Р°РµС‚ РґР»СЏ РЅР°РЅРµСЃРµРЅРёСЏ СЃР»РµРґСѓСЋС‰РµРіРѕ СѓРґР°СЂР° Рё С‚.Рґ.<br />
+Р”Р°Р¶Рµ РµСЃР»Рё РёС… 2 РёР»Рё 3, РјРѕР¶РЅРѕ СЃРјРµР»Рѕ Р±РёС‚СЊ РёС… С†РµРЅРѕР№ Р±СЂРѕРЅРё, Р° РЅРµ Р·РґРѕСЂРѕРІСЊСЏ.
 <div>
     <div class="item pautina"><b></b><s>12</s></div>
 </div><div class="clear"></div>
@@ -323,11 +323,11 @@
     <div class="item zoloto"><b></b><s>1</s></div>
     <div class="item svetl"><b></b><s>1</s></div>
 </div><div class="clear"></div>
-Расставляем ловкушки на кроликов возле их нор. В прудах на болоте ловим рыбу и собираем камыш.<br />
-Камыш оставляем про запас (будущие бинты и дротики). Рыбу/мясо сушим на сушилках, излишки жарим на костре.<br />
-Бежим к ближайшему скоплению ульев, ищем одиноколетающих пчёл и ловим. Как только все пчёлы в улье заканчиваются, - ломаем его, получая мёд.<br />
-По пути ловим бабочек. Сажаем их вокруг собственного улья в лагере: получаются цветы и новые бабочки, что упрощает нашим пчёлам задачу сбора мёда.<br />
-По ночам ловим светлячков; для каски и освещения лагеря (просто разбросайте их вокруг лагеря).
+Р Р°СЃСЃС‚Р°РІР»СЏРµРј Р»РѕРІРєСѓС€РєРё РЅР° РєСЂРѕР»РёРєРѕРІ РІРѕР·Р»Рµ РёС… РЅРѕСЂ. Р’ РїСЂСѓРґР°С… РЅР° Р±РѕР»РѕС‚Рµ Р»РѕРІРёРј СЂС‹Р±Сѓ Рё СЃРѕР±РёСЂР°РµРј РєР°РјС‹С€.<br />
+РљР°РјС‹С€ РѕСЃС‚Р°РІР»СЏРµРј РїСЂРѕ Р·Р°РїР°СЃ (Р±СѓРґСѓС‰РёРµ Р±РёРЅС‚С‹ Рё РґСЂРѕС‚РёРєРё). Р С‹Р±Сѓ/РјСЏСЃРѕ СЃСѓС€РёРј РЅР° СЃСѓС€РёР»РєР°С…, РёР·Р»РёС€РєРё Р¶Р°СЂРёРј РЅР° РєРѕСЃС‚СЂРµ.<br />
+Р‘РµР¶РёРј Рє Р±Р»РёР¶Р°Р№С€РµРјСѓ СЃРєРѕРїР»РµРЅРёСЋ СѓР»СЊРµРІ, РёС‰РµРј РѕРґРёРЅРѕРєРѕР»РµС‚Р°СЋС‰РёС… РїС‡С‘Р» Рё Р»РѕРІРёРј. РљР°Рє С‚РѕР»СЊРєРѕ РІСЃРµ РїС‡С‘Р»С‹ РІ СѓР»СЊРµ Р·Р°РєР°РЅС‡РёРІР°СЋС‚СЃСЏ, - Р»РѕРјР°РµРј РµРіРѕ, РїРѕР»СѓС‡Р°СЏ РјС‘Рґ.<br />
+РџРѕ РїСѓС‚Рё Р»РѕРІРёРј Р±Р°Р±РѕС‡РµРє. РЎР°Р¶Р°РµРј РёС… РІРѕРєСЂСѓРі СЃРѕР±СЃС‚РІРµРЅРЅРѕРіРѕ СѓР»СЊСЏ РІ Р»Р°РіРµСЂРµ: РїРѕР»СѓС‡Р°СЋС‚СЃСЏ С†РІРµС‚С‹ Рё РЅРѕРІС‹Рµ Р±Р°Р±РѕС‡РєРё, С‡С‚Рѕ СѓРїСЂРѕС‰Р°РµС‚ РЅР°С€РёРј РїС‡С‘Р»Р°Рј Р·Р°РґР°С‡Сѓ СЃР±РѕСЂР° РјС‘РґР°.<br />
+РџРѕ РЅРѕС‡Р°Рј Р»РѕРІРёРј СЃРІРµС‚Р»СЏС‡РєРѕРІ; РґР»СЏ РєР°СЃРєРё Рё РѕСЃРІРµС‰РµРЅРёСЏ Р»Р°РіРµСЂСЏ (РїСЂРѕСЃС‚Рѕ СЂР°Р·Р±СЂРѕСЃР°Р№С‚Рµ РёС… РІРѕРєСЂСѓРі Р»Р°РіРµСЂСЏ).
 <div>
     <div class="item med"><b></b><s>2</s></div>
 </div><div class="clear"></div>
@@ -346,7 +346,7 @@
     <div class="item med"><b></b><s>1</s></div>
     <div class="item pchela"><b></b><s>4</s></div>
 </div><div class="clear"></div>
-Если нам повезло и мы встретили железного коня на шахматном полу, агрим его в сторонку от других фигур и убиваем тактикой &laquo;ударил-отбежал&raquo;; получаем шестерёнку.
+Р•СЃР»Рё РЅР°Рј РїРѕРІРµР·Р»Рѕ Рё РјС‹ РІСЃС‚СЂРµС‚РёР»Рё Р¶РµР»РµР·РЅРѕРіРѕ РєРѕРЅСЏ РЅР° С€Р°С…РјР°С‚РЅРѕРј РїРѕР»Сѓ, Р°РіСЂРёРј РµРіРѕ РІ СЃС‚РѕСЂРѕРЅРєСѓ РѕС‚ РґСЂСѓРіРёС… С„РёРіСѓСЂ Рё СѓР±РёРІР°РµРј С‚Р°РєС‚РёРєРѕР№ &laquo;СѓРґР°СЂРёР»-РѕС‚Р±РµР¶Р°Р»&raquo;; РїРѕР»СѓС‡Р°РµРј С€РµСЃС‚РµСЂС‘РЅРєСѓ.
 <div>
     <div class="item shesterni"><b></b><s>1</s></div>
 </div><div class="clear"></div>
@@ -362,12 +362,12 @@
     <div class="item shesterni"><b></b><s>1</s></div>
     <div class="item material doski"><b></b><s>1</s><i></i></div>
 </div><div class="clear"></div>
-Теперь еду можно хранить в холодильнике.
+РўРµРїРµСЂСЊ РµРґСѓ РјРѕР¶РЅРѕ С…СЂР°РЅРёС‚СЊ РІ С…РѕР»РѕРґРёР»СЊРЅРёРєРµ.
 
-<h2>Дни 13-20, скоро зима</h2>
+<h2>Р”РЅРё 13-20, СЃРєРѕСЂРѕ Р·РёРјР°</h2>
 
-Основное отличие зимы от лета в холоде, смене продолжительности дня и ночи, и ограничении съедобных ресурсов (фрукты/овощи не растут).<br />
-Поэтому до её наступления надо забить холодильник едой и немного утеплиться:
+РћСЃРЅРѕРІРЅРѕРµ РѕС‚Р»РёС‡РёРµ Р·РёРјС‹ РѕС‚ Р»РµС‚Р° РІ С…РѕР»РѕРґРµ, СЃРјРµРЅРµ РїСЂРѕРґРѕР»Р¶РёС‚РµР»СЊРЅРѕСЃС‚Рё РґРЅСЏ Рё РЅРѕС‡Рё, Рё РѕРіСЂР°РЅРёС‡РµРЅРёРё СЃСЉРµРґРѕР±РЅС‹С… СЂРµСЃСѓСЂСЃРѕРІ (С„СЂСѓРєС‚С‹/РѕРІРѕС‰Рё РЅРµ СЂР°СЃС‚СѓС‚).<br />
+РџРѕСЌС‚РѕРјСѓ РґРѕ РµС‘ РЅР°СЃС‚СѓРїР»РµРЅРёСЏ РЅР°РґРѕ Р·Р°Р±РёС‚СЊ С…РѕР»РѕРґРёР»СЊРЅРёРє РµРґРѕР№ Рё РЅРµРјРЅРѕРіРѕ СѓС‚РµРїР»РёС‚СЊСЃСЏ:
 <div>
     <div class="item odejda naushniki"><b></b><i></i></div>
     <div class="eq level1"></div>
@@ -382,10 +382,10 @@
     <div class="item kremen"><b></b><s>3</s></div>
 </div><div class="clear"></div>
 
-<h2>Хаки</h2>
+<h2>РҐР°РєРё</h2>
 
-Консоль: ~ - открыть, Ctrl+L - очистить<br />
-Открыть карту:<br />minimap = TheSim:FindFirstEntityWithTag("minimap")<br />minimap.MiniMap:ShowArea(0, 0, 0, 10000)<br />
+РљРѕРЅСЃРѕР»СЊ: ~ - РѕС‚РєСЂС‹С‚СЊ, Ctrl+L - РѕС‡РёСЃС‚РёС‚СЊ<br />
+РћС‚РєСЂС‹С‚СЊ РєР°СЂС‚Сѓ:<br />minimap = TheSim:FindFirstEntityWithTag("minimap")<br />minimap.MiniMap:ShowArea(0, 0, 0, 10000)<br />
 
 </body>
 </html>
