--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="item brevno"><b></b><s>4</s></div>
     <div class="item kamen"><b></b><s>4</s></div>
 </div><div class="clear"></div>
-Одеваем:
+Надеваем:
 <div>
     <div class="item surv rukzak"><b></b><i></i></div>
     <div class="eq level1"></div>
