--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="item sherst_b"><b></b></div>
 </div><div class="clear"></div>
 Как только на пути попадается небольшая лесопосадка (обособленно-стоящие 10-20 деревьев), поджигаем её зажигалкой или факелом.
-Ждём пока деревя обугляться, рубим их и собираем:
+Ждём пока деревя обуглятся, рубим их и собираем:
 <div>
     <div class="item ugol"><b></b><s>8</s></div>
 </div><div class="clear"></div>
